convert to as version

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-.classpath
-.project
-/bin
-/gen
+.gradle/
+.idea/
+build/
+gradle/
+*.apk
+*.iml
+graldew
+*.bat
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/build/
+/captures
+.externalNativeBuild
